# Mathenjeans2022

Marienbad/: generator.py  main.py
marienbad/: README.md  pyproject.toml
marienbad/src/marienbad/: generator.py  solver.py
marienbad/src/marienbad_alberic89/: generator.py
