[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "marienbad_alberic89"
version = "0.1"
authors = [
  { name="alberic89", email="alberic89@gmx.com" },
]
description = "A tool for win at Marienbad game."
keywords = ["Marienbad"]
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]

[project.urls]
"Homepage" = "https://github.com/alberic89/Mathenjeans2022/tree/main/Marienbad"
"Bug Tracker" = "https://github.com/alberic89/Mathenjeans2022/issues"

[project.scripts]
marienbad-generator = "marienbad_alberic89.generator:main"

[project.gui-scripts]
marienbad-generator = "marienbad_alberic89.generator:main"
