[project]
name = "marienbad"
version = "0.1.1"
authors = [
  { name="alberic89", email="alberic89@gmx.com" },
]
description = "A toolsuite for win at Marienbad (Nim) game."
keywords = ["Marienbad","Nim"]
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Natural Language :: French",
]

[project.urls]
"Homepage" = "https://github.com/alberic89/Mathenjeans2022/tree/main/marienbad"
"Bug Tracker" = "https://github.com/alberic89/Mathenjeans2022/issues"

[project.scripts]
marienbad-generator = "marienbad.generator:main"

[project.gui-scripts]
marienbad-generator = "marienbad.generator:main"
